# sphinx-icalendar

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.rst  pyproject.toml
.github/workflows/: tests.yml
docs/: changelog.rst  conf.py  contributing.rst  index.rst
docs/usage/: calendar.rst  ics.rst  index.rst  jcal.rst
sphinx_icalendar/: _transform.py  _visitors.py
tests/: test_lexer.py  test_setup.py  test_transform.py  test_visitors.py
