[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sphinx-icalendar"
dynamic = ["version"]
description = "Sphinx extension that renders code-block:: calendar as an HTML calendar"
readme = "README.rst"
requires-python = ">=3.10"  # also check install.rst
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sphinx>=5.0",  # also check install.rst
    "icalendar",
    "recurring-ical-events>=3.8.1",
    "sphinx-design>=0.5",
]

[project.urls]
Homepage = "https://sphinx-icalendar.readthedocs.io/en/latest/"
Documentation = "https://sphinx-icalendar.readthedocs.io/en/latest/"
Repository = "https://github.com/niccokunzmann/sphinx-icalendar-extension"
Changelog = "https://sphinx-icalendar.readthedocs.io/en/latest/changelog.html"
"Bug Tracker" = "https://github.com/niccokunzmann/sphinx-icalendar-extension/issues"
Funding = "https://github.com/sponsors/niccokunzmann"

[project.optional-dependencies]
dev = ["pytest", "sphinx", "sphinx-autobuild"]

[project.entry-points."pygments.lexers"]
ics = "sphinx_icalendar._lexer:ICalendarLexer"
jcal = "sphinx_icalendar._lexer:JCalLexer"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "sphinx_icalendar/_version.py"
